--- a/css/transaction-history.css
+++ b/css/transaction-history.css
@@ -20,6 +20,42 @@ main {
     padding: 2em;
 }
 
+.confirmation-message {
+    background-color: #d4edda;
+    color: #155724;
+    padding: 1em;
+    border: 1px solid #c3e6cb;
+    margin-bottom: 1em;
+}
+
+#expenditure-overview {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 2em;
+}
+
+#expenditure-list {
+    flex: 1;
+    padding-right: 2em;
+}
+
+#expenditure-chart {
+    flex: 1;
+    text-align: center;
+}
+
+#expenditurePieChart {
+    max-width: 300px; /* Set a maximum width for the chart */
+    max-height: 300px; /* Set a maximum height for the chart */
+}
+
+@media (min-width: 768px) {
+    #expenditurePieChart {
+        max-width: 200px; /* Set a smaller maximum width for the desktop */
+        max-height: 200px; /* Set a smaller maximum height for the desktop */
+    }
+}
 .transaction-item {
     border: 1px solid #ddd;
     padding: 1em;
