--- a/css/transaction-history.css
+++ b/css/transaction-history.css
@@ -2,31 +2,42 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: var(--primary-color);
 }
 
 header {
-    background-color: #f8f9fa;
+    background-color: var(--accent-color);
     padding: 1em;
     text-align: center;
+    box-shadow: var(--box-shadow);
 }
 
 nav a {
     margin: 0 1em;
     text-decoration: none;
-    color: #007bff;
+    color: var(--main-color);
+    transition: color 0.3s;
 }
+
+nav a:hover {
+    color: var(--secondary-color);
+}
+
 
 main {
     padding: 2em;
 }
 
 .confirmation-message {
-    background-color: #d4edda;
-    color: #155724;
+    background-color: var(--accent-color);
+    color: var(--main-color);
     padding: 1em;
-    border: 1px solid #c3e6cb;
+    border: 1px solid var(--secondary-color);
     margin-bottom: 1em;
+    border-radius: 8px;
+    box-shadow: var(--box-shadow);
 }
+
 
 #expenditure-overview {
     text-align: center;
@@ -74,12 +85,27 @@ main {
 }
 
 footer {
-    background-color: #f8f9fa;
+    background-color: var(--main-color);
+    color: var(--accent-color);
     text-align: center;
-    padding: 0.5em;
+    padding: 15px;
     position: fixed;
-    margin-top: 2px;
     bottom: 0;
-    z-index: 1;
     width: 100%;
+    box-shadow: var(--box-shadow);
+}
+
+.footer-nav {
+    margin-top: 10px;
+}
+
+.footer-nav a {
+    color: var(--accent-color);
+    text-decoration: none;
+    margin: 0 10px;
+    transition: color 0.3s;
+}
+
+.footer-nav a:hover {
+    color: var(--secondary-color);
 }
