--- a/css/withdraw-funds.css
+++ b/css/withdraw-funds.css
@@ -113,6 +113,20 @@ input:focus {
     background: var(--secondary-color);
 }
 
+.method-option {
+    display: none;
+    margin-top: 10px;
+}
+
+.method-option select {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid var(--secondary-color);
+    border-radius: 5px;
+    font-size: 1rem;
+}    
+
+
 .submit-button {
     background: var(--main-color);
     color: white;
