--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ body {
 /* Header */
 .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex;
     align-items: center;
     margin-bottom: 20px;
     color: var(--secondary-color);
@@ -413,7 +413,7 @@ body {
 .taskbar-toggle {
     position: fixed;
     top: 15px;
-    left: 15px;
+    right: 15px; /* Align to the right */
     font-size: 24px;
     cursor: pointer;
     color: var(--main-color);
