--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ body {
     font-size: 1.5rem;
     cursor: pointer;
     transition: color 0.3s;
-    color: var(--main-color);
+    color: var(--main-color);   margin-left: 20px; /* Add margin to separate icons */
 }
 .notification-icon {
     margin-left: 20px;
@@ -411,12 +411,10 @@ body {
     left: 0;
 }
 .taskbar-toggle {
-    position: fixed;
-    top: 15px;
-    right: 15px; /* Align to the right */
     font-size: 24px;
     cursor: pointer;
     color: var(--main-color);
+    margin-left: 20px; /* Add margin to separate icons */
 }
 
 /* Infinite Scrolling Content */
@@ -425,4 +423,5 @@ body {
 }
 
 .dynamic-item {
-    display: none; /* Hide dynamic items */}
+    display: none; /* Hide dynamic items */
+}
