--- a/css/styles.css
+++ b/css/styles.css
@@ -38,8 +38,12 @@ body {
     position: fixed;
     top: 0;
     left: 0;
-    right: 0;
-    z-index: 100;
+    margin-bottom: 5px;
+   /* z-index: 100;**/
+    width: 100%;
+    height: 60px;
+    z-index: 1000;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
 }
 .header-left, .header-center, .header-right {
     display: flex;
@@ -589,13 +593,14 @@ body {
 
 .taskbar {
     position: fixed;
-    top: 0;
-    left: -250px;
+    top: 60px;
+    right: -250px;
     width: 250px;
     height: 100%;
     background-color: var(--main-color);
-    transition: left 0.3s;
+    transition: right 0.3s;
     box-shadow: var(--box-shadow);
+    z-index: 999;
 }
 .taskbar ul {
     list-style-type: none;
@@ -604,7 +609,7 @@ body {
 }
 .taskbar ul li {
     padding: 15px;
-    border-bottom: 1px solid var(--secondary-color);
+    border-bottom: 1px solid #007BFF;
 }
 .taskbar ul li a {
     color: var(--accent-color);
@@ -614,8 +619,10 @@ body {
 }
 .taskbar ul li a i {
     margin-right: 10px;
+    color: #162c44;
 }
-.taskbar ul li a:hover {
+
+.taskbar ul li:hover {
     background-color: var(--secondary-color);
 }
 .taskbar.open {
@@ -634,4 +641,16 @@ body {
 
 .dynamic-item {
     display: none;
+}
+
+
+/*****   the active url styling on the togle nav bar .. still experimanetal   *****/
+
+.taskbar li.active {
+    background: var(--secondary-color);
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
+
+.taskbar li.active i {
+    color: #007BFF;
 }
