--- a/pages/wallet-page/css/styles.css
+++ b/pages/wallet-page/css/styles.css
@@ -64,7 +64,7 @@ body {
     gap: 10px;
 }
 
-.wallet-actions input[type="number"] {
+.wallet-actions input[type="text"] {
     flex: 1;
     padding: 8px 10px;
     border-radius: 8px;
@@ -74,7 +74,7 @@ body {
     transition: border 0.2s;
 }
 
-.wallet-actions input[type="number"]:focus {
+.wallet-actions input[type="text"]:focus {
     border: 1.5px solid var(--main-color);
 }
 
@@ -93,7 +93,7 @@ body {
     background: var(--head-color2);
 }
 
-.currency-converter input[type="number"], .currency-converter select {
+.currency-converter input[type="text"], .currency-converter select {
     width: 100%;
     margin-bottom: 10px;
     padding: 8px 10px;
@@ -104,7 +104,7 @@ body {
     transition: border 0.2s;
 }
 
-.currency-converter input[type="number"]:focus, .currency-converter select:focus {
+.currency-converter input[type="text"]:focus, .currency-converter select:focus {
     border: 1.5px solid var(--main-color);
 }
 
